sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: ')' expected but '<-' found.
  while (i <- getNombreValeurs()){
           ^AlgInsertionSort:5: error: illegal start of simple expression
  while (i <- getNombreValeurs()){
                                ^