sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var i=0
  var variable=getValeur(0)
  while (i <- getNombreValeurs()){
    variable=getValeur(i)
    if (getValeur(i-1)>variable){
      copie(i-1,i)
    }
    i=i+1
  }
}